NPC action choice setup.
NPC decision mind component now has functions for main actions for each game and a function for splitting this one function into those specific game functions.
There is also functions for optional actions including doubting and slapping as well as a function to split into these 2.

So call the main action decide function for the NPC to do their main action passing the current game and the NPC's difficulty. Call the Optional action decide function for optional actions within games like slapping and doubting.

New enum called opponent difficulties.

New variable in BP_NPC called difficulty of type opponent difficulties.

Setup for calling the corresponding function for option choice but not in use yet so can still use general purpose action for testing games.

Started working on the decision making in the IDI decide function but need to keep going and finish it probably tomorrow.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -313,10 +313,10 @@ None=======
 BillboardComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 BP_I_Doubt_It_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 End Game=PropertyWrapper.DefaultValueCategory.All Cards
 End Game_6=PropertyWrapper.DefaultValueCategory.All Cards
-BP_NPC_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+BP_NPC_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 CapsuleComponent=
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 Character=PropertyWrapper.DefaultValueCategory.All Cards
@@ -378,6 +378,10 @@ PlayCard=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultV
 PlayCard_6=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 Remove Card From Visual Pile_3=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 TargetPoint=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+General Decide=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+IDI Decide=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+IDI Decide_3=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+BPC_NPC_Choice_Scoring_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Player
@@ -1762,6 +1766,7 @@ MaterialExpressionAdd="\"Object\" "
 MaterialExpressionDivide="\"Object\" "
 MaterialExpressionLinearInterpolate="\"Object\" "
 MaterialExpressionComponentMask="\"Object\" "
+BPC_NPC_Choice_Scoring_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1772,6 +1777,8 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1800,43 +1807,40 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
+OpenAssetsAtExit=/Game/NPCs/Decision_Making/BPC_NPC_Choice_Scoring.BPC_NPC_Choice_Scoring
+OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/Cards/M_Card_Test
-MRUItem1=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem2=/Game/Player/BP_Player
-MRUItem3=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem4=/Game/LevelPrototyping/Meshes/SM_ChamferCube
-MRUItem5=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem6=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem7=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem8=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
-MRUItem9=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem10=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem11=/Game/UI/Non_Diegetic/WBP_On_Screen_Text
-MRUItem12=/Game/NPCs/BP_NPC
-MRUItem13=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem14=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
-MRUItem15=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
-MRUItem16=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem17=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Sort_Methods
-MRUItem18=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem19=/Game/Main_Game_Managers/Rat_Screw/Enum_RatScrewPlayers
-MRUItem20=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card_w_Mouse
-MRUItem21=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem22=/Game/Player/Input/IMC/IMC_Auction
-MRUItem23=/Game/Player/Input/Actions/Card_Selection/IA_Lock_Camera
-MRUItem24=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem25=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem26=/Game/Player/Input/Actions/RatScrew/IA_Slap
-MRUItem27=/Game/Player/Input/Actions/IA_End_Turn
-MRUItem28=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
-MRUItem29=/Game/Player/Input/IMC/IMC_Bar
+MRUItem0=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
+MRUItem1=/Game/NPCs/Enum_Opponent_Difficulties
+MRUItem2=/Game/NPCs/BP_NPC
+MRUItem3=/Game/Shared_Game_Mechanics/Cards/M_Card_Test
+MRUItem4=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem5=/Game/Player/BP_Player
+MRUItem6=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem7=/Game/LevelPrototyping/Meshes/SM_ChamferCube
+MRUItem8=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem9=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem10=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem11=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem12=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem13=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem14=/Game/UI/Non_Diegetic/WBP_On_Screen_Text
+MRUItem15=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem16=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
+MRUItem17=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
+MRUItem18=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem19=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Sort_Methods
+MRUItem20=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem21=/Game/Main_Game_Managers/Rat_Screw/Enum_RatScrewPlayers
+MRUItem22=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card_w_Mouse
+MRUItem23=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem24=/Game/Player/Input/IMC/IMC_Auction
+MRUItem25=/Game/Player/Input/Actions/Card_Selection/IA_Lock_Camera
+MRUItem26=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem27=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem28=/Game/Player/Input/Actions/RatScrew/IA_Slap
+MRUItem29=/Game/Player/Input/Actions/IA_End_Turn
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -3170,6 +3174,14 @@ MaterialExpressionComponentMask.MaterialExpressionComponentMask=True
 MaterialExpressionComponentMask.MaterialExpression=True
 MaterialExpression.MaterialExpression=True
 StaticMeshComponent.Mobile=True
+BPC_NPC_Choice_Scoring_C.ComponentTick=True
+BPC_NPC_Choice_Scoring_C.Tags=True
+BPC_NPC_Choice_Scoring_C.ComponentReplication=True
+BPC_NPC_Choice_Scoring_C.Activation=True
+BPC_NPC_Choice_Scoring_C.Variable=True
+BPC_NPC_Choice_Scoring_C.Cooking=True
+BPC_NPC_Choice_Scoring_C.Sockets=True
+BPC_NPC_Choice_Scoring_C.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -3221,6 +3233,7 @@ None=======
 /Game/UI/Non_Diegetic/WBP_On_Screen_Text.WBP_On_Screen_Text=1
 /Game/LevelPrototyping/Meshes/SM_ChamferCube.SM_ChamferCube=1
 /Game/Shared_Game_Mechanics/Cards/M_Card_Test.M_Card_Test=1
+/Game/NPCs/Decision_Making/BPC_NPC_Choice_Scoring.BPC_NPC_Choice_Scoring=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
