Expert difficulty NPC decision making for IDI.
Some more variables: Expert N. Cards Held by Experts which is a counter including players holding the correct cards.
Filled the expert difficulty card amount weightings with some floats for now.
Expert initial bluffing mistake randomisation - chance for a mistake where we bluff even though it might not be the correct play.
Expert extra card unique chance - the chance for doing a unique card over a incorrect card when adding a card that isn't the correct type to the cards to play.

Changed the easy difficulty adding incorrect or unique cards checks to use the same way expert difficulty does as well but need to properly test all this eventually since some of it will need testing with cards running out.

Bluffing for expert NPCs is as follows: if the NPC has no cards of correct type or if the expert initial bluffing mistake randomisation is true.
If we are not bluffing then we first check if both the opponents don't have any cards of the correct type and the player doesn't have any cards of the correct type. If both of these are empty then we add a card of the correct type in order of the for loop playing and check if it is valid so if it is valid then we check if the card is contained in the cards to play array and if not then add it to the array. If the card is not valid then we do a check for if we should do unique cards of incorrect cards using the expert extra card unique chance and a random float value. Depending on this we then check if the corresponding array is empty for unique or incorrect and then loop through the corresponding array attempting to add the card to the array if it is not contained in the cards to play array. We break the array if we get to the end of the corresponding array then we try to add a card of the opposite array.

If we are bluffing then we check if the opponent card correct type -> difficulty array contains any cards held by expert NPCs and if so then we start looping through the cards a

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -290,14 +290,14 @@ UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 UserDefinedStruct=
 Struct_Card=
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 BP_Card_Dealer_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 EdGraph=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 BP_Rat_Screw_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 BP_CardPile_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 Deal To Players=PropertyWrapper.DefaultValueCategory.All Cards
@@ -377,16 +377,16 @@ EdGraphNode=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.Defau
 PlayCard=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 PlayCard_6=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 Remove Card From Visual Pile_3=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-TargetPoint=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+TargetPoint=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,TargetPoint.Collision.Collision
 General Decide=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-IDI Decide=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-IDI Decide_3=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+IDI Decide=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+IDI Decide_3=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 BPC_NPC_Choice_Scoring_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 BPC_NPC_Decision_Mind_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Modes_Instances/Modes
+ContentBrowserTab1.SelectedPaths=/Game/NPCs/Decision_Making
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -1663,11 +1663,11 @@ BP_Card_Dealer_C="\"Object.Default.Pile Cards\" "
 BillboardComponent="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
 BP_NPC_C="\"Object\" \"Object.Actor.Tags\" "
-BP_NPC_C="\"Object\" "
+BP_NPC_C="\"Object\" \"Object.NPC Info.Game -> Difficulty\" "
 Character="\"Object\" "
-Character="\"Object\" "
+Character="\"Object\" \"Object.NPC Info.Game -> Difficulty\" "
 Pawn="\"Object\" "
-Pawn="\"Object\" "
+Pawn="\"Object\" \"Object.NPC Info.Game -> Difficulty\" "
 BP_Card_C="\"Object\" \"Object.Default.Card Info\" "
 BP_Card_C="\"Object\" "
 None=======
@@ -1772,6 +1772,11 @@ MaterialExpressionLinearInterpolate="\"Object\" "
 MaterialExpressionComponentMask="\"Object\" "
 BPC_NPC_Choice_Scoring_C="\"Object\" "
 BPC_NPC_Decision_Mind_C="\"Object\" "
+K2Node_SwitchInteger="\"Object\" "
+K2Node_Switch="\"Object\" "
+IDI Decide="\"Struct.Easy Difficulty Card Amount Weightings\" \"Struct.Expert Difficulty Card Amount Weightings\" "
+IDI Decide_3="\"Struct\" "
+WidgetComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1782,11 +1787,11 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1813,14 +1818,15 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 OpenAssetsAtExit=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind.BPC_NPC_Decision_Mind
+OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
-MRUItem1=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem2=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem3=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem4=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem5=/Game/Player/BP_Player
+MRUItem0=/Game/Player/BP_Player
+MRUItem1=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
+MRUItem2=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem3=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem4=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem5=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
 MRUItem6=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
 MRUItem7=/Game/Shared_Game_Mechanics/BPI_Playing_Character
 MRUItem8=/Game/NPCs/BPI_NPC_Opponent
@@ -3197,6 +3203,24 @@ BPC_NPC_Decision_Mind_C.Events=True
 BP_NPC_C.NPC Info=True
 BP_I_Doubt_It_Game_Manager_C.Doubt=True
 BP_I_Doubt_It_Game_Manager_C.Cards=True
+K2Node_SwitchInteger.PinOptions=True
+WidgetComponent.TransformCommon=True
+WidgetComponent.Materials=True
+WidgetComponent.UserInterface=True
+WidgetComponent.Interaction=True
+WidgetComponent.Physics=True
+WidgetComponent.Animation=True
+WidgetComponent.Collision=True
+WidgetComponent.Rendering=True
+WidgetComponent.Layers=True
+WidgetComponent.HLOD=True
+WidgetComponent.PathTracing=True
+WidgetComponent.Navigation=True
+WidgetComponent.VirtualTexture=True
+WidgetComponent.Tags=True
+WidgetComponent.ComponentReplication=True
+WidgetComponent.Variable=True
+WidgetComponent.Cooking=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -3317,7 +3341,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=317.000 Y=213.000
+ScreenPosition=X=2237.000 Y=213.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
