Rat Screw UI and Gameplay progression
Gameplay:

When a face card is played, normal turn taking will cease and a player will continuously play cards until they either play their own face card, or run out of turns to play said face card (each face card has its own countdown value). If no face card is played, the opponent takes the cards in the pile.

Ratscrew can actually be won now as well

UI:

General purpose text pop up with an animation. Text displayed can be changed in the Wipe Animation Function. Prototype.

Commented:

Deal Shared Cards function

--- a/Project_7_Sins/Saved/Config/WindowsEditor/Editor.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/Editor.ini
@@ -1,6 +1,6 @@
 [/Script/UnrealEd.UnrealEdOptions]
 UsingXGE=True
-UsingXGE=True
+UsingXGE=False
 bExpandClassPickerDefaultClassList=True
 bExpandCustomClassPickerClassList=True
 None=======
